--- a/templates/liutf.xml
+++ b/templates/liutf.xml
@@ -1,5 +1,5 @@
 <templateSet group="liutf">
-  <template name="fc" value="/**&#10; * Function:$methodName$&#10; * Description:&#10;$param$&#10; * @return $return$ &#10; * @version: v1.0.0&#10; * Author:liutf&#10; * Date:$date$&#10; * Modification History: &#10; *    Date      Author  Version  Description&#10; * ---------------------------------------------------------*&#10; * $date$   liutf   v1.0.0    创建  &#10;*/" description="method comment" toReformat="false" toShortenFQNames="true">
+  <template name="fc" value="/**&#10; * Function:$methodName$&#10; * Description:&#10;$param$&#10; * @return $return$ &#10; * @version: v1.0.0&#10; * Author:liutf&#10; * Date:$date$&#10; * Modification History: &#10; *    Date      Author  Version  Description&#10; * ---------------------------------------------------------*&#10; * $date$   liutf   v1.0.0    创建  &#10;*/" description="Method comment template" toReformat="false" toShortenFQNames="true">
     <variable name="methodName" expression="methodName()" defaultValue="" alwaysStopAt="true" />
     <variable name="param" expression="groovyScript(&quot;def result=''; def params=\&quot;${_1}\&quot;.replaceAll('[\\\\[|\\\\]|\\\\s]', '').split(',').toList(); for(i = 0; i &lt; params.size(); i++) {result+=' * @param ' + params[i] + ((i &lt; params.size() - 1) ? '\\n\\b' : '')}; return result&quot;, methodParameters())" defaultValue="" alwaysStopAt="true" />
     <variable name="return" expression="methodReturnType()" defaultValue="" alwaysStopAt="true" />
@@ -8,7 +8,7 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="ate" value="Assert.assertEquals($expect$,$result$)" description="Assert.assertEquals" toReformat="false" toShortenFQNames="true">
+  <template name="ase" value="Assert.assertEquals($expect$,$result$)" description="Assert.assertEquals" toReformat="false" toShortenFQNames="true">
     <variable name="expect" expression="suggestFirstVariableName()" defaultValue="var" alwaysStopAt="false" />
     <variable name="result" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
@@ -16,13 +16,13 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="test" value="@Test&#10;public void $expect$(){&#10;&#10;}" description="junit test method template" toReformat="false" toShortenFQNames="true">
+  <template name="test" value="@Test&#10;public void $expect$(){&#10;&#10;}" description="Junit test method template" toReformat="false" toShortenFQNames="true">
     <variable name="expect" expression="suggestFirstVariableName()" defaultValue="test" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="{{" value="{{ $expect$ }}" description="get {{}} expression" toReformat="false" toShortenFQNames="true">
+  <template name="{{" value="{{ $expect$ }}" description="Get {{}} expression" toReformat="false" toShortenFQNames="true">
     <variable name="expect" expression="jsSuggestVariableName()" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="HTML" value="true" />
@@ -37,6 +37,32 @@
       <option name="HTML" value="true" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="JSP" value="true" />
+    </context>
+  </template>
+  <template name="gsm" value="public String $expect_methodName$(){&#10;    $END$&#10;    return null;&#10;}" description="Generate a method with return String" toReformat="false" toShortenFQNames="true">
+    <variable name="expect_methodName" expression="methodName()" defaultValue="methodName" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
+  <template name="gmethod" value="public void $expect_methodName$(){&#10;    $END$&#10;}" description="Generate a method with return void" toReformat="false" toShortenFQNames="true">
+    <variable name="expect_methodName" expression="methodName()" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
+  <template name="ggetmapping" value="@GetMapping(&quot;/$path$&quot;)&#10;public void $method_name$(){&#10;    $END$&#10;    return null;&#10;}" description="Generate GetMapping code template" toReformat="false" toShortenFQNames="true">
+    <variable name="path" expression="suggestVariableName()" defaultValue="your-path" alwaysStopAt="true" />
+    <variable name="method_name" expression="methodName()" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
+  <template name="gpostmapping" value="@PostMapping(&quot;/$path$&quot;)&#10;public void $method_name$(){&#10;    $END$&#10;    return null;&#10;}" description="Generate PostMapping code template" toReformat="false" toShortenFQNames="true">
+    <variable name="path" expression="suggestVariableName()" defaultValue="" alwaysStopAt="true" />
+    <variable name="method_name" expression="methodName()" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_CODE" value="true" />
     </context>
   </template>
 </templateSet>
