--- a/templates/liutf.xml
+++ b/templates/liutf.xml
@@ -39,26 +39,20 @@
       <option name="JSP" value="true" />
     </context>
   </template>
-  <template name="igsm" value="public String $expect_methodName$(){&#10;    $END$&#10;    return null;&#10;}" description="Generate a method with return String" toReformat="false" toShortenFQNames="true">
-    <variable name="expect_methodName" expression="methodName()" defaultValue="methodName" alwaysStopAt="true" />
-    <context>
-      <option name="JAVA_CODE" value="true" />
-    </context>
-  </template>
   <template name="igmethod" value="public void $expect_methodName$(){&#10;    $END$&#10;}" description="Generate a method with return void" toReformat="false" toShortenFQNames="true">
     <variable name="expect_methodName" expression="methodName()" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="igetmapping" value="@GetMapping(&quot;/$path$&quot;)&#10;public void $method_name$(){&#10;    $END$&#10;    return null;&#10;}" description="Generate GetMapping code template" toReformat="false" toShortenFQNames="true">
+  <template name="igetmapping" value="@GetMapping(&quot;/$path$&quot;)&#10;public void $method_name$(){&#10;    $END$&#10;}" description="Generate GetMapping code template" toReformat="false" toShortenFQNames="true">
     <variable name="path" expression="suggestVariableName()" defaultValue="your-path" alwaysStopAt="true" />
     <variable name="method_name" expression="methodName()" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="igpostmapping" value="@PostMapping(&quot;/$path$&quot;)&#10;public void $method_name$(){&#10;    $END$&#10;    return null;&#10;}" description="Generate PostMapping code template" toReformat="false" toShortenFQNames="true">
+  <template name="igpostmapping" value="@PostMapping(&quot;/$path$&quot;)&#10;public void $method_name$(){&#10;    $END$&#10;}" description="Generate PostMapping code template" toReformat="false" toShortenFQNames="true">
     <variable name="path" expression="suggestVariableName()" defaultValue="" alwaysStopAt="true" />
     <variable name="method_name" expression="methodName()" defaultValue="" alwaysStopAt="true" />
     <context>
